# simpleagent

./: README.md  example-config.json  main.py  pyproject.toml  simpleagent.spec
.github/workflows/: main.yaml
simpleagent/: __init__.py  cli.py  config.py  graph.py  model.py  pathcompleter.py  repl.py  ui.py
simpleagent/ui/: __init__.py  autocomplete.py  pathcompleter.py  ui.py
