[project]
name = "simpleagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-anthropic>=0.3.19",
    "langchain-community>=0.3.29",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-ollama>=0.3.7",
    "langgraph>=0.6.6",
    "nest-asyncio>=1.6.0",
    "prompt-toolkit>=3.0.52",
    "textual>=5.3.0",
    "textual-dev>=1.7.0",
]
